--- a/TiacApp/appsettings.json
+++ b/TiacApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=tiacApp;Username=postgres;Password=super"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
