--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Visual Studio temporary files
+.vs/
+
+# Entity Framework Migrations
+TiacApp/Migrations/
